--- a/assignments/assignment2/style.css
+++ b/assignments/assignment2/style.css
@@ -37,7 +37,6 @@ h1 {
   height: 40px;
   padding: 5px;
   float: right;
-  margin-right: 36px;
   margin-top: 0px;
   font-weight: bold;
   position: relative;
@@ -45,13 +44,12 @@ h1 {
 
 .content{
   border: 5px solid black;
-  width: 90%;
   height: auto;
-  margin: 2.5%;
-  color: black
-  font-size: 25px;
+  color: black;
+  font-size: 14px;
   padding: 2%;
   padding-top: 55px;
+  margin: 0;
   background-color: rgba(0,0,0,0.3);
 }
 
@@ -67,38 +65,34 @@ h1 {
   background-color: #FFFF00;
 }
 
+.container {
+  display: grid;
+  margin: 0px 25px;
+  grid-gap: 25px;
+
+}
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
-  .col-lg-4 {
-  	float: left;
-    width: 33.33%;
+  .container {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6,.col-md-12 {
-    float: left;
+  .container {
+    grid-template-columns: 1fr 1fr;
   }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-12 {
-    margin-left: -10px;
-    width: 100%;
+  .menu-item:last-child {
+    grid-column: 1/ 3;
   }
   .name3{
-    margin-right: 65px;
     width: 100px;
   }
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
-  .col-sm-12 {
-  	float: left;
-    width: 100%;
-  }
-  .content-name{
-    margin-right: 30px;
+  .container {
+    grid-template-columns: 1fr;
   }
 }
